crates/templates/tests/snapshots/run_test__render-7.snap
---
source: crates/templates/tests/run_test.rs
description: Run function with a global dependency and a message
expression: output
---
rargs_run() {
  declare -a rargs_input=()
  normalize_rargs_input "$@"
  parse_arguments "${rargs_input[@]}"
  # Check global dependencies
  
  dependency="git"
  if ! command -v $dependency >/dev/null 2>&1; then
    printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing dependency: " "$dependency" >&2
    printf "Please install git\n" >&2
    exit 1
  else
    deps["$dependency"]="$(command -v $dependency | head -n1)"
  fi

  printf "\e[31m%s\e[33m%s\e[31m%s\e[0m\n\n" "Nothing to do. Please add " "commands" " or a root command" >&2
  usage >&2
  exit 1
}
